--- a/view/common/options-sidebar.phtml
+++ b/view/common/options-sidebar.phtml
@@ -1,7 +1,8 @@
 <div id="column-options" class="sidebar">
     <div class="confirm-main">
         <a href="#" class="sidebar-close o-icon-close"><span class="screen-reader-text"><?php echo $this->translate('Close'); ?></span></a>
-        <h3><?php echo $this->translate('Column options:'); ?></h3>
+        <h3 class="batch-edit-heading"><?php echo $this->translate('Batch edit column options:'); ?></h3>
+        <h3 class="single-column-heading"><?php echo $this->translate('Column options:'); ?></h3>
 
         <?php if (empty($resourceType) || in_array($resourceType, ['items', 'resources'])): ?>
         <div class="multivalue option">
