--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -76,7 +76,7 @@ $pageTitle = isset($resourceTypeLabels[$resourceType])
                     <?php endif; ?>
                     </ul>
                 </td>
-                <td>
+                <td class="element-options">
                     <ul class='options'>
                         <li class='column-import option' style='display:none;'><span class="option-label"></span>
                             <input type='hidden' disabled='disabled' value='1' class='column-option column-url' name='column-url[<?php echo $index; ?>]'></input>
