Fix bug re: clicking disabled batch edit first.
The user could have clicked the batch edit button 
in its disabled state before actually doing 
anything, and then trying to batch edit would 
select column headers but not open the sidebar. 
A different approach to triggering the sidebar 
seems to have fixed it.

--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -40,7 +40,7 @@ $pageTitle = isset($resourceTypeLabels[$resourceType])
 
 <fieldset id="mapping-data" class="section active">
     <div class="batch-inputs">
-        <a class="inactive button sidebar-content" data-sidebar-selector="" id="batch-edit-options"><?php echo $this->translate('Batch edit options'); ?></a>
+        <a class="inactive button" data-sidebar-selector="#column-options" id="batch-edit-options"><?php echo $this->translate('Batch edit options'); ?></a>
     </div>
     <table class="batch-edit tablesaw tablesaw-stack" data-tablesaw-mode="stack">
         <thead>
