--- a/view/common/options-sidebar.phtml
+++ b/view/common/options-sidebar.phtml
@@ -4,10 +4,13 @@
         <h3 class="batch-edit-heading"><?php echo $this->translate('Batch edit column options:'); ?></h3>
         <h3 class="single-column-heading"><?php echo $this->translate('Column options:'); ?></h3>
 
+        <p class="batch-edit-description"><?php echo $this->translate('Highlighted options will apply to selected column headers. Reset an option to cancel changes.'); ?></p>
+
         <?php if (empty($resourceType) || in_array($resourceType, ['items', 'resources'])): ?>
         <div class="multivalue option">
             <label for="multivalue"><?php echo $this->translate('Use multivalue separator'); ?></label>
             <input type="checkbox" data-column-option="column-multivalue" name="multivalue" id="multivalue">
+            <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
         </div>
         <?php endif; ?>
 
@@ -15,6 +18,7 @@
             <label for="value-language"><?php echo $this->translate('Language'); ?></label>
             <span class="description"><?php echo $this->translate('This will override language settings in basic import settings.'); ?></span>
             <input id="value-language" class="value-language active" type="text">
+            <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
         </div>
 
         <div class="import option">
@@ -24,6 +28,7 @@
                 <option class="button column-url" value="column-url"><?php echo $this->translate('Import as URL reference'); ?></option>
                 <option class="button column-reference" value="column-reference"><?php echo $this->translate('Import as Omeka S resource ID'); ?></option>
             </select>
+            <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
         </div>
     </div>
     <div class="confirm-panel">
