--- a/view/common/resource-sidebar.phtml
+++ b/view/common/resource-sidebar.phtml
@@ -41,7 +41,7 @@
                     'empty_option' => $this->translate('Select below'),
                     'term_as_value' => false,
                     'prepend_value_options' => [
-                        'internal_id' => $this->translate('Internal id'),
+                        'internal_id' => $this->translate('Internal ID'),
                     ],
                     'term_as_value' => true,
                 ],
@@ -66,9 +66,8 @@
                     'name' => 'column-item_property',
                     'options' => [
                         'empty_option' => $this->translate('Select below'),
-                        'term_as_value' => false,
                         'prepend_value_options' => [
-                            'internal_id' => $this->translate('Internal id'),
+                            'internal_id' => $this->translate('Internal ID'),
                         ],
                         'term_as_value' => true,
                     ],
@@ -99,7 +98,7 @@
                 <?php if (empty($resourceType) || $resourceType === 'resources'): ?>
                 <option value="1" data-flag-name="column-resource_type"><?php echo $this->translate('Resource type'); ?></option>
                 <?php endif; ?>
-                <option value="1" data-flag-name="column-resource"><?php echo $this->translate('Internal id'); ?></option>
+                <option value="1" data-flag-name="column-resource"><?php echo $this->translate('Internal ID'); ?></option>
                 <option value="1" data-flag-name="column-resource_template"><?php echo $this->translate('Resource template name'); ?></option>
                 <option value="1" data-flag-name="column-resource_class"><?php echo $this->translate('Resource class term'); ?></option>
                 <?php if (in_array($userRole, ['global_admin', 'site_admin'])): ?>
