--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -328,7 +328,7 @@ li.column-multivalue {
 
 .flags .collapse + .collapsible {
     overflow: visible;
-    padding: 12px 0 0 12px;
+    padding: 12px 0 0;
     margin-bottom: 24px;
 }
 
