--- a/view/common/resource-sidebar.phtml
+++ b/view/common/resource-sidebar.phtml
@@ -96,10 +96,10 @@
             <select name="generic-data" class="flags" data-flag-class="generic-data" data-flag-label="<?php echo $this->translate('Data'); ?>">
                 <option value="default"><?php echo $this->translate('Select below'); ?></option>
                 <option value="1" data-flag-name="column-resource"><?php echo $this->translate('Resource identifier'); ?></option>
-                <option value="1" data-flag-name="column-resource_template"><?php echo $this->translate('Resource template name'); ?></option>
-                <option value="1" data-flag-name="column-resource_class"><?php echo $this->translate('Resource class term'); ?></option>
+                <option value="1" data-flag-name="column-resource_template"><?php echo $this->translate('Resource template (by label)'); ?></option>
+                <option value="1" data-flag-name="column-resource_class"><?php echo $this->translate('Resource class (by term)'); ?></option>
                 <?php if (in_array($userRole, ['global_admin', 'site_admin'])): ?>
-                <option value="1" data-flag-name="column-owner_email"><?php echo $this->translate('Owner email address'); ?></option>
+                <option value="1" data-flag-name="column-owner_email"><?php echo $this->translate('Owner (by email address)'); ?></option>
                 <?php endif; ?>
                 <option value="1" data-flag-name="column-is_public"><?php echo $this->translate('Visibility public/private'); ?></option>
             </select>
