--- a/view/common/resource-sidebar.phtml
+++ b/view/common/resource-sidebar.phtml
@@ -33,7 +33,7 @@
   
             <?php if (empty($resourceType) || in_array($resourceType, ['items', 'resources'])): ?>
             <div class="mapping property items">
-            <h4><?php echo $this->translate('Item set property'); ?></h4>
+            <h4><?php echo $this->translate('Item set (by selected property)'); ?></h4>
             <?php echo $this->propertySelect([
                 'name' => 'column-item_set_property',
                 'options' => [
@@ -47,7 +47,6 @@
                 'attributes' => [
                     'id' => 'column-item_set_property',
                     'class' => 'chosen-select',
-                    'data-placeholder' => $this->translate('Select the identifier below'),
                     'data-flag-name' => 'column-item_set',
                     'data-flag-class' => 'resource-data',
                     'data-flag-label' => $this->translate('Item set'),
@@ -58,7 +57,7 @@
   
             <?php if (empty($resourceType) || in_array($resourceType, ['media', 'resources'])): ?>
             <div class="mapping property media">
-                <h4><?php echo $this->translate('Item property'); ?></h4>
+                <h4><?php echo $this->translate('Item (by selected property)'); ?></h4>
                 <span class="description"><?php echo $this->translate('There must be an item identifier to create a media. This is generally "dcterms:identifier", but it may be an internal id.')?></span>
                 <?php echo $this->propertySelect([
                     'name' => 'column-item_property',
@@ -72,7 +71,6 @@
                     'attributes' => [
                         'id' => 'column-item_property',
                         'class' => 'chosen-select',
-                        'data-placeholder' => $this->translate('Select the identifier below'),
                         'data-flag-name' => 'column-item',
                         'data-flag-class' => 'resource-data',
                         'data-flag-label' => $this->translate('Item'),
@@ -90,7 +88,7 @@
     </a>
     <div class="collapsible">
         <div class="mapping">
-            <select name="generic-data" class="flags" data-flag-class="generic-data" data-flag-label="<?php echo $this->translate('Data'); ?>">
+            <select name="generic-data" class="flags" data-flag-class="generic-data" data-flag-label="<?php echo $this->translate('Generic data'); ?>">
                 <option value="default"><?php echo $this->translate('Select below'); ?></option>
                 <option value="1" data-flag-name="column-resource_template"><?php echo $this->translate('Resource template (by label)'); ?></option>
                 <option value="1" data-flag-name="column-resource_class"><?php echo $this->translate('Resource class (by term)'); ?></option>
