Add private value column option
(fix #160)

--- a/view/common/options-sidebar.phtml
+++ b/view/common/options-sidebar.phtml
@@ -36,6 +36,13 @@
             </div>
             <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
         </div>
+        <div class="private-values option">
+            <label for="private-values"><?php echo $this->translate('Import values as private'); ?></label>
+            <div class="option-inputs">
+                <input type="checkbox" data-column-option="column-private-values" id="private-values">
+            </div>
+            <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
+        </div>
     </div>
     <div class="confirm-panel">
         <button type="button"><?php echo $this->translate("Apply changes"); ?></button>
