--- a/view/csv-import/mapping-sidebar/item-set.phtml
+++ b/view/csv-import/mapping-sidebar/item-set.phtml
@@ -3,7 +3,7 @@
         <h4><?php echo $this->translate('Item set-specific data'); ?></h4>
     </a>
     <div class="collapsible">
-        <div class="mapping additions item-sets">
+        <div class="mapping additions item-sets one-line">
             <label for="additions"><?php echo $this->translate('Open to additions'); ?></label>
             <input name="additions" id="additions" type="checkbox" data-flag-class="resource-data" data-flag-name="column-is_open" data-flag-label="<?php echo $this->translate('Open to additions'); ?>" value="1">
         </div>
