--- a/view/common/options-sidebar.phtml
+++ b/view/common/options-sidebar.phtml
@@ -20,7 +20,7 @@
             <label for="value-language"><?php echo $this->translate('Language'); ?></label>
             <span class="description"><?php echo $this->translate('This will override language settings in basic import settings.'); ?></span>
             <div class="option-inputs">
-                <input id="value-language" class="value-language active" type="text">
+                <input id="value-language" class="validate-language active" type="text">
             </div>
             <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
         </div>
