Add resource identifier property option
This allows the "Omeka property" data type to refer to data in the sheet
that's a value of a property of an existing resource, rather than having
to have the resource's internal Omeka S ID in the sheet. Usual use-case
is using an external identifier.

(#162)

--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -81,8 +81,8 @@ ul.options {
     margin: 0;
 }
 
-ul.options li {
-    display: flex;
+ul.options > li:not(.active) {
+    display: none;
 }
 
 li {
