--- a/view/common/options-sidebar.phtml
+++ b/view/common/options-sidebar.phtml
@@ -16,6 +16,16 @@
         </div>
         <?php endif; ?>
 
+        <div class="private-values option one-line">
+            <div class="option-info">
+                <label for="private-values"><?php echo $this->translate('Import values as private'); ?></label>
+                <span class="description"><?php echo $this->translate('This will override visibility settings in basic import settings.'); ?></span>
+            </div>
+            <div class="option-inputs">
+                <input type="checkbox" data-column-option="column-private-values" id="private-values">
+            </div>
+            <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
+        </div>
         <div class="language option">
             <label for="value-language"><?php echo $this->translate('Language'); ?></label>
             <span class="description"><?php echo $this->translate('This will override language settings in basic import settings.'); ?></span>
@@ -24,7 +34,6 @@
             </div>
             <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
         </div>
-
         <div class="data-type option">
             <label for="column-data-type"><?php echo $this->translate('Data type'); ?></label>
             <div class="option-inputs">
@@ -37,15 +46,9 @@
             </div>
             <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
         </div>
-        <div class="private-values option one-line">
-            <label for="private-values"><?php echo $this->translate('Import values as private'); ?></label>
-            <div class="option-inputs">
-                <input type="checkbox" data-column-option="column-private-values" id="private-values">
-            </div>
-            <a href="#" class="reset-link"><?php echo $this->translate('Reset'); ?></a>
-        </div>
         <div class="resource-identifier-property option">
             <label for="resource-identifier-property"><?php echo $this->translate('Resource identifier property'); ?></label>
+            <span class="description"><?php echo $this->translate('This only takes effect when using the "Omeka resource" data type above.'); ?></span>
             <div class="option-inputs">
                 <?php echo $this->propertySelect([
                     'name' => 'resource-identifier-property',
